--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appnope==0.1.0
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.0
+cycler==0.10.0
 decorator==4.4.1
 defusedxml==0.6.0
 entrypoints==0.3
@@ -19,7 +20,9 @@ jupyter-client==5.3.4
 jupyter-core==4.6.1
 jupyterlab==1.2.1
 jupyterlab-server==1.0.6
+kiwisolver==1.1.0
 MarkupSafe==1.1.1
+matplotlib==3.1.1
 mistune==0.8.4
 more-itertools==7.2.0
 nbconvert==5.6.1
@@ -37,6 +40,7 @@ prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 ptyprocess==0.6.0
 Pygments==2.4.2
+pyparsing==2.4.5
 pyro-api==0.1.1
 pyro-ppl==0.5.1
 pyrsistent==0.15.5
